<resources>
    <string name="app_name">NYC Schools</string>
    <string name="generic_error">Something went wrong, please try again!</string>
    <string name="call">Call</string>
    <string name="sat_writing_avg_score">SAT Writing Avg. Score</string>
    <string name="sat_math_avg_score">SAT Math Avg. Score</string>
    <string name="sat_reading_avg_score">SAT Reading Avg. Score</string>
    <string name="no_of_students_appeared">No. of students appeared:</string>
    <string name="school_name">School Name:</string>
    <string name="close_school_info">close school info</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>